--- a/WebContent/adminAddStock.zul
+++ b/WebContent/adminAddStock.zul
@@ -50,7 +50,43 @@
                                                         <column label="" width="690px"/>
                                                     </columns>
                                                     <rows>
-                                                        
+                                                        <label value="Productos: " />
+																<bandbox id="cbProduct" width="90%" constraint="no empty">
+																	<bandpopup>
+																		<listbox id="lbxProduct" mold="paging" pageSize="5" emptyMessage="No existen productos para mostrar" width="600px" forward="onSelect = lbxListDependencesEdit.onSelectMine">
+																		<auxhead>
+																			<auxheader colspan="1">
+																				<div width="85%">
+																					<image src="/img/icon-filter.png"/>
+																					<textbox id="txtFilterCode" instant="true" width="100%" forward="onChange = lbxProduct.onFilter"/>
+																				</div>						
+																			</auxheader>
+																			<auxheader colspan="1">
+																				<div width="95%">
+																					<image src="/img/icon-filter.png"/>
+																					<textbox id="txtFilterName" instant="true" width="100%" forward="onChange = lbxProduct.onFilter"/>
+																				</div>						
+																			</auxheader>
+																			<auxheader colspan="1" align="center">
+																				<button	forward="onClick = lbxProduct.onCleanFilters" tooltiptext="Limpiar" label="Limpiar"/>
+																			</auxheader>
+																		</auxhead>
+																		<listhead>
+																			<listheader label="Codigo" sort="none" width="20%" align="center"/>
+																			<listheader label="Nombre" sort="none" width="50%" align="center"/>
+																			<listheader label="Precio" sort="none" width="30%" align="center"/>
+																		</listhead>
+													
+																		<template name="model">
+																			<listitem>
+																				<listcell label="${each.partNumber}" />
+																				<listcell label="${each.description}" />
+																				<listcell label="${each.amount}" />
+																			</listitem>
+																		</template>
+																	</listbox>
+																</bandpopup>
+															</bandbox>
                                                         <row>
                                                             <label value="${c:l('sp.common.enterprise')}" sclass="lblbold"/>
                                                             <hlayout>
@@ -210,8 +246,8 @@
                                                             <label value="${c:l('sp.common.form')}" sclass="lblbold"/>
                                                             <hlayout>
                                                               <textbox id="txtForm" maxlength="45" width="320px"/>
-                                                              <button id="btnPPNSubmitFile" label="${c:l('sp.automatic.commission.loadCSV')}" upload="true,maxsize=4096" width="126px" height="25px" orient="vertical" class="open gray"/>
-                                                              <button  id="btnClear" width="150px" label="${c:l('sp.common.clear')}" class="open gray" />
+                                                              <button id="btnPPNSubmitFile" label="${c:l('sp.automatic.commission.loadCSV')}" upload="true,maxsize=2048" width="110px" height="25px" orient="vertical" class="open gray"/>
+                                                              <button  id="btnClear" width="110px" height="25px" label="${c:l('sp.common.clear')}" class="open gray" />
                                                             </hlayout>
                                                         </row>
                                                          <row>
