--- a/WebContent/adminAddWait.zul
+++ b/WebContent/adminAddWait.zul
@@ -228,8 +228,8 @@
                                                             <label value="${c:l('sp.common.form')}" sclass="lblbold"/>
                                                             <hlayout>
                                                               <textbox id="txtForm" maxlength="45" width="320px"/>
-                                                              <button id="btnPPNSubmitFile" label="${c:l('sp.automatic.commission.loadCSV')}" upload="true,maxsize=4096" width="126px" height="25px" orient="vertical" class="open gray"/>
-                                                              <button  id="btnClear" width="150px" label="${c:l('sp.common.clear')}" class="open gray" />
+                                                              <button id="btnPPNSubmitFile" label="${c:l('sp.automatic.commission.loadCSV')}" upload="true,maxsize=2048" width="110px" height="25px" orient="vertical" class="open gray"/>
+                                                              <button  id="btnClear" width="110px" height="25px" label="${c:l('sp.common.clear')}" class="open gray" />
                                                             </hlayout>
                                                         </row>
                                                          <row>
