--- a/WebContent/myAccount.zul
+++ b/WebContent/myAccount.zul
@@ -121,15 +121,15 @@
                                                                 <label value="${c:l('sp.common.phoneNumber.example')}" sclass="lblexample"/>
                                                             </hlayout>
                                                         </row>
-                                                        <row>
-                                                            <label value="${c:l('sp.common.receiveTopNotification')}" sclass="lblbold"/>
-                                                            <checkbox id="cbxReceiveTopNotification" checked="true" disabled="true"/>
-                                                        </row>
+<!--                                                         <row> -->
+<!--                                                             <label value="${c:l('sp.common.receiveTopNotification')}" sclass="lblbold"/> -->
+<!--                                                             <checkbox id="cbxReceiveTopNotification" checked="true" disabled="true"/> -->
+<!--                                                         </row> -->
                                                     
-                                                        <row>
-                                                            <label value="${c:l('sp.common.enabled')}" sclass="lblbold"/>
-                                                            <checkbox id="cbxEnabled" checked="true"  disabled="true"/>
-                                                        </row>
+<!--                                                         <row> -->
+<!--                                                             <label value="${c:l('sp.common.enabled')}" sclass="lblbold"/> -->
+<!--                                                             <checkbox id="cbxEnabled" checked="true"  disabled="true"/> -->
+<!--                                                         </row> -->
                                                     </rows>
                                                 </grid>
 
