--- a/WebContent/adminAddQuarantine.zul
+++ b/WebContent/adminAddQuarantine.zul
@@ -50,7 +50,12 @@
                                                         <column label="" width="690px"/>
                                                     </columns>
                                                     <rows>
-                                                        
+                                                        <row> 
+                                                        <label value="${c:l('sp.common.product')}" sclass="lblbold"/>
+                                                            <hlayout>
+                                                               <button id="btnSearch" label="${c:l('sp.common.actions.search')}" width="80px" class="open orange" tooltiptext="${c:l('sp.common.actions.search.filter.tooltip')}"/>
+                                                            </hlayout>
+														</row>	
                                                         <row>
                                                             <label value="${c:l('sp.common.enterprise')}" sclass="lblbold"/>
                                                             <hlayout>
@@ -169,7 +174,8 @@
                                                             <label value="${c:l('sp.common.customer')}" sclass="lblbold"/>
                                                             <hlayout>
                                                                 <combobox id="cmbCustomer" width="190px" mold="rounded" readonly="true"/>
-                                                                <label value="*" sclass="lblreq" />
+                                                                 <button id="btnSearchCustomer" image="/images/icon-show.png" width="30px" class="open orange" tooltiptext="${c:l('sp.common.actions.search.filter.tooltip')}"/>
+<!--                                                                 <label value="*" sclass="lblreq" /> -->
                                                             </hlayout>
                                                         </row>
                                                         <row>
