--- a/WebContent/reportStock.zul
+++ b/WebContent/reportStock.zul
@@ -88,10 +88,11 @@
                                                 <listbox id="lbxReport" width="895px" height="560px" mold="paging">
                                                     <listhead>
                                                         <listheader label="#" width="40px"/>
-<!--                                                        <listheader label="${c:l('sp.common.login')}" width="80px"/>-->
+                                                       <listheader label="${c:l('sp.common.PartNumber')}" width="80px"/>
                                                         <listheader label="${c:l('sp.common.name')}" width="200px"/>
                                                         <listheader label="${c:l('sp.common.provider')}" width="70px"/>
                                                         <listheader label="${c:l('sp.common.creationDate')}" width="140px"/>
+                                                        <listheader label="${c:l('sp.common.sp.common.date.expiration')}" width="140px"/>
                                                         <listheader label="${c:l('sp.transaction.amount')}" width="60px"/>
                                                         <listheader label="${c:l('sp.common.quantity')}" width="110px"/>
                                                         <listheader label="${c:l('sp.common.category')}" width="120px"/>
