--- a/WebContent/listAddTransit.zul
+++ b/WebContent/listAddTransit.zul
@@ -33,6 +33,26 @@
                                         </div>
                                         <div height="5px" width="100%" style="background:#333;" align="left"></div>
                                         <div>
+                                         <!--Filters for Searching-->
+                                            <vlayout>
+                                                <hlayout style="text-align:right">
+                                                    <label value="${c:l('sp.common.alias')}" width="80px" sclass="lblbold"/>
+                                                    <textbox id="txtAlias" value="" width="150px" tooltiptext="${c:l('sp.common.searching.filter')}"/>
+                                                </hlayout>
+
+                                                <hlayout>
+                                                    <!--Add button-->
+                                                    <div align="left" width="495px">
+                                                        <button id="btnAdd" label="${c:l('sp.common.actions.add')}" width="80px" class="open orange" tooltiptext="${c:l('sp.common.actions.add.tooltip')}" visible="true"/>
+                                                    </div>
+                                                    <!--Filters button-->
+                                                    <div align="right" width="400px">
+                                                        <button id="btnSearch" label="${c:l('sp.common.actions.search')}" width="80px" class="open orange" tooltiptext="${c:l('sp.common.actions.search.filter.tooltip')}"/>
+                                                        <button id="btnClear" label="${c:l('sp.common.actions.cancel')}"  width="80px" class="open gray" tooltiptext="${c:l('sp.common.actions.cancel.filter.tooltip')}"/>
+                                                    </div>
+                                                </hlayout>
+
+                                            </vlayout>
 
                                             <separator/>
                                             <!--Record Listbox-->
